# classical_ml_and_agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  environment.yml  patch_notebook.py  pyproject.toml
.github/workflows/: ci.yml  monitor.yml
agent/: __init__.py  graph.py  prompts.py  tools.py
api/: __init__.py  main.py
app/: streamlit_app.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
models/: comprehensive_benchmark_raw.csv  comprehensive_benchmark_summary.csv  pvalue_matrix_all.csv  pvalue_matrix_hill_climbing.csv  pvalue_matrix_mi.csv
notebooks/: 01_eda_preprocessing_training.ipynb
policy/: __init__.py  cost_matrix.json  intervention_engine.py
src/: __init__.py  config.py  download_data.py  eda.py  explainer.py  fn_analysis.py  information_theory.py  monitoring.py  preprocessing.py  train.py
tests/: __init__.py  test_agent.py  test_preprocessing.py
tracking/: mlflow_setup.py
